# artisan

./: .env.example  .gitignore  CLAUDE.md  Makefile  playwright.config.ts  specs.md
app/: next.config.ts  package.json  tailwind.config.ts
bot/: Dockerfile  fly.toml  (+2 more)
engine-py/: .env.example  pyproject.toml
engine-py/artisan/: __init__.py  config.py
engine-py/artisan/adapters/: __init__.py  alpaca_prices.py  finnhub_news.py  fmp_fundamentals.py  fmp_screener.py
engine-py/artisan/db/: __init__.py  client.py
engine-py/artisan/execution/: __init__.py  alpaca_executor.py
engine-py/artisan/filters/: hard_filters.py
engine-py/artisan/jobs/: __init__.py  daily_score_signal.py  nightly_ingest.py  process_intents.py
engine-py/artisan/llm/: __init__.py  daily_briefing.py  thesis_analyst.py
engine-py/artisan/pipeline/: __init__.py  signals.py
engine-py/artisan/scorers/: __init__.py  composite.py  factor_composite.py  fundamental.py  growth_scorer.py  low_vol_scorer.py  momentum_scorer.py  quality_scorer.py  sentiment.py  technical.py  value_scorer.py  zscore.py
engine-py/artisan/timing/: entry_gates.py
engine-py/tests/: __init__.py  conftest.py  test_alpaca_executor.py  test_alpaca_prices.py  test_composite_scorer.py  test_daily_briefing.py  test_daily_score_signal.py  test_entry_gates.py  test_factor_scorers.py  test_finnhub_news.py  test_fmp_fundamentals.py  test_fmp_screener.py  test_fundamental_scorer.py  test_nightly_ingest.py  test_sentiment_scorer.py  test_signals_pipeline.py  test_smoke.py  test_technical_scorer.py  test_thesis_analyst.py
(+117 files in other folders)
