[project]
name = "artisan"
version = "0.1.0"
description = "Phase 0 hybrid engine for Artisan."
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.37",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "pandas-ta>=0.3",
  "python-dotenv>=1.0",
  "supabase>=2.10",
  "tenacity>=8.3",
  "vaderSentiment>=3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["artisan"]
